# lunchsync-sg

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.example.json  main.py  pyproject.toml
src/lunchsync_sg/: __init__.py  cli.py  config.py  lunchmoney.py  models.py  normalizer.py  setup.py
src/lunchsync_sg/parsers/: __init__.py  base.py  citi.py  dbs.py  hsbc.py  ocbc.py  uob.py
src/lunchsync_sg/utils/: __init__.py  parsing.py
tests/: __init__.py  conftest.py  test_config.py  test_lunchmoney.py  test_models.py  test_normalizer.py  test_parsers.py  test_utils.py
tests/fixtures/: citi_prestige.csv  citi_rewards.csv  dbs_credit_1.csv  dbs_credit_2.csv  dbs_savings.csv  hsbc_revolution.csv  ocbc_360.csv  ocbc_credit_1.csv  ocbc_credit_2.csv  uob_platinum_1.xls  uob_platinum_2.xls  uob_solitaire.xls  uob_solitaire_2.xls
